force-app/main/default/objects/Slack_Config__mdt/Slack_Config__mdt.object-meta.xml
<CustomObject>
    <description>Slack Named Credential settings for UAT Feedback notifications.</description>
    <label>Slack Config</label>
    <pluralLabel>Slack Configs</pluralLabel>
</CustomObject>