force-app/main/default/objects/Slack_Config__mdt/fields/Auto_Analyze_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Analyze_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, new Feedback Slack alerts @mention Claude with an analyze prompt.</description>
    <inlineHelpText>Turn on to auto-wake Claude in Slack for each new Feedback alert.</inlineHelpText>
    <label>Auto Analyze Enabled</label>
    <type>Checkbox</type>
</CustomField>