force-app/main/default/objects/Slack_Config__mdt/fields/Auto_Analyze_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Auto_Analyze_Prompt__c</fullName>
    <description>Optional prompt text appended after the Claude @mention. Leave blank to use the default.</description>
    <inlineHelpText>Customize what Claude is asked to do. Leave blank for the built-in analyze prompt.</inlineHelpText>
    <label>Auto Analyze Prompt</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>