force-app/main/default/objects/Slack_Config__mdt/fields/Claude_Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Claude_Slack_User_Id__c</fullName>
    <description>Slack member ID for the Claude bot in this workspace (for example U0ABCDEF).</description>
    <inlineHelpText>Open the Claude bot profile in Slack → ⋯ → Copy member ID, then paste it here.</inlineHelpText>
    <label>Claude Slack User Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>