force-app/main/default/objects/Slack_Config__mdt/fields/Slack_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Slack_Named_Credential__c</fullName>
    <description>API Name of the Named Credential that stores the Slack Incoming Webhook URL.</description>
    <inlineHelpText>Usually Slack_Webhook. Create that Named Credential in Setup after package install.</inlineHelpText>
    <label>Slack Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>